# prog-eng-homeworks

./: .gitignore  Makefile  README.md  readme.md  workspace.dsl
services/: CMakeLists.txt  Dockerfile  data.js  data.sql  docker-compose.yaml  init-db.sql  nginx.conf  openapi.yaml  optimization.md  performance_design.md  queries.js  queries.sql  schema.sql  schema_design.md  validation.js
services/configs/: static_config_driver.yaml  static_config_ride.yaml  static_config_user.yaml
services/data/: taxi.db  taxi.db-shm  taxi.db-wal
services/docs/decisions/: 0001-postgresql-optimization.md
services/mongo-init/: 01-validation.js  02-data.js  03-queries.js
services/src/auth/: jwt_auth_checker.cpp  jwt_auth_checker.hpp  jwt_auth_factory.cpp  jwt_auth_factory.hpp
services/src/common/: database.cpp  database.hpp  models.cpp  models.hpp  mongo_database.cpp  mongo_database.hpp  rate_limiter.cpp  rate_limiter.hpp  redis_cache.cpp  redis_cache.hpp
services/src/driver/: handlers.cpp  handlers.hpp  main.cpp
services/src/ride/: handlers.cpp  handlers.hpp  main.cpp
services/src/user/: handlers.cpp  handlers.hpp  main.cpp
services/swagger/: index.html
services/tests/: conftest.py  requirements.txt  test_driver_service.py  test_performance.py  test_ride_service.py  test_user_service.py
task_01/: readme.md  workspace.dsl
